# ray-tracer

./: .gitignore  Cargo.toml  README.md
src/: encoding.rs  hit.rs  light.rs  main.rs  materials.rs  math.rs  plane.rs  ray.rs  raytrace.rs  scene.rs  sphere.rs  util.rs  vector.rs
src/objects/: bounding.rs  colors.rs  light.rs  materials.rs  mod.rs  plane.rs  quad.rs  scene.rs  sphere.rs  tree.rs  triangle.rs
